@@ -15,7 +15,7 @@
 %%  when \code{prod(dim(.))} is larger than \eqn{2^{31} - 1}.
 %
 
-\section{Changes in version 1.4-0 (2021-10-06 r3405)}{
+\section{Changes in version 1.4-0 (2021-10-07 r3406)}{
   \subsection{Bug Fixes}{
     \itemize{
       \item Update many \file{src/*.c} preventing integer overflow in
@@ -41,6 +41,11 @@
       \item fix leak in C-level \code{Csparse_to_dense()} thanks to Bill
       Dunlap in \R's \PR{18204} and \code{install_lu()}
       called from \code{solve(<dgCMatrix>)} in \PR{18205}.
+
+      \item \code{band(M, k1, k2)} now also works when \code{k1 * k2} is
+      larger than 2^31-1, the maximal integer, fixing R-forge Matrix bug
+      6743 by Ariel Paulson.  Further, it works when \code{M} is a sparse
+      \code{"symmetricMatrix"} but the band is not symmetric, \code{k1 != -k2}.
     }
   }
   \subsection{Misc}{
